@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: os.c,v 1.20.18.7 2008/01/17 23:45:58 tbox Exp $ */
+/* $Id: os.c,v 1.20.18.8 2008/10/24 01:28:08 marka Exp $ */
 
 #include <config.h>
 #include <stdarg.h>
@@ -163,6 +163,10 @@ ns_os_inituserinfo(const char *username) {
 
 void
 ns_os_changeuser(void) {
+}
+
+void
+ns_os_adjustnofile(void) {
 }
 
 void
