@@ -1,3 +1,8 @@
+2473.	[port]		linux: raise the limit on open files to the possible
+			maximum value before spawning threads; 'files'
+		        specified in named.conf doesn't seem to work with
+			threads as expected. [RT #18784]
+
 2472.	[port]		linux: check the number of available cpu's before
 			calling chroot as it depends on "/proc". [RT #16923]
 
